navbar - overflow fix 2

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -79,10 +79,8 @@ nav {
 }
 
 @media screen and (max-width: 900px) {
-    html, body {
-        overflow: hidden;
+    nav {
         overflow-x: hidden;
-        overflow-y: hidden;
     }
 
     .nav-links {
@@ -98,8 +96,6 @@ nav {
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
         overflow-x: hidden;
-        overflow-y: hidden;
-        overflow: hidden;
     }
 
     .nav-links li {
